--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -20,16 +20,22 @@
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnx-iS-Jd4">
                                         <rect key="frame" x="0.0" y="0.0" width="792" height="834"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" priority="250" constant="792" id="KnJ-Li-48P"/>
+                                            <constraint firstAttribute="height" priority="250" constant="834" id="fpE-uM-t2p"/>
+                                        </constraints>
                                         <viewLayoutGuide key="contentLayoutGuide" id="Ddv-yG-9Yh"/>
                                         <viewLayoutGuide key="frameLayoutGuide" id="xyn-3F-4lg"/>
                                     </scrollView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="lnx-iS-Jd4" secondAttribute="bottom" id="Mfk-VW-X6E"/>
-                                    <constraint firstItem="lnx-iS-Jd4" firstAttribute="top" secondItem="03b-5n-hY6" secondAttribute="top" id="RlB-ak-uOf"/>
-                                    <constraint firstAttribute="trailing" secondItem="lnx-iS-Jd4" secondAttribute="trailing" id="YhY-9s-GOu"/>
-                                    <constraint firstItem="lnx-iS-Jd4" firstAttribute="leading" secondItem="03b-5n-hY6" secondAttribute="leading" id="ykc-Z4-JfE"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lnx-iS-Jd4" secondAttribute="bottom" id="Mfk-VW-X6E"/>
+                                    <constraint firstItem="lnx-iS-Jd4" firstAttribute="top" relation="greaterThanOrEqual" secondItem="03b-5n-hY6" secondAttribute="top" id="RlB-ak-uOf"/>
+                                    <constraint firstItem="lnx-iS-Jd4" firstAttribute="centerY" secondItem="03b-5n-hY6" secondAttribute="centerY" id="Sew-5W-Qdu"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lnx-iS-Jd4" secondAttribute="trailing" id="YhY-9s-GOu"/>
+                                    <constraint firstItem="lnx-iS-Jd4" firstAttribute="centerX" secondItem="03b-5n-hY6" secondAttribute="centerX" id="bMr-2r-exN"/>
+                                    <constraint firstItem="lnx-iS-Jd4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="03b-5n-hY6" secondAttribute="leading" id="ykc-Z4-JfE"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -45,6 +51,8 @@
                     <connections>
                         <outlet property="dropZone" destination="03b-5n-hY6" id="JLc-Ls-Mwa"/>
                         <outlet property="scrollView" destination="lnx-iS-Jd4" id="Uy3-Ha-oeE"/>
+                        <outlet property="scrollViewHeight" destination="fpE-uM-t2p" id="h9S-kq-Npp"/>
+                        <outlet property="scrollViewWidth" destination="KnJ-Li-48P" id="6X5-FZ-gg5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
